# cuda

./: CMakeLists.txt  matrix_addition.cu  matrix_multiplication_untiled.cu  run.sh  vector_addition.cu  visualize_wave.py  wave2d.cu  wave2d_naive.cu  wave2d_tiled.cu
assignment3/: Makefile
assignment3/src/: cuda_check.cuh  multigpu.cu  pipeline.cu
gpu_wave_project/: Makefile  README.md  analyze_results.py  job_submission.slurm  report_template.md  requirements.txt  run_experiments.py  visualize_wave.py  wave2d_solver.cu
